<resources>
    <string name="app_name">Wallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nishad Khan</string>
    <string name="nav_header_subtitle">+8801709815615</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="transfer">Transfer</string>
    <string name="_n_transfer">\nTransfer</string>
    <string name="qr_transfer">QR Transfer</string>
    <string name="_n_qr_transfer">\nQR Transfer</string>
    <string name="top_up">Top Up</string>
    <string name="_n_top_up">\nTop Up</string>
    <string name="payment">Payment</string>
    <string name="_n_payment">\nPayment</string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="history">History</string>
    <string name="balance_bdt">Balance: BDT</string>
    <string name="_0_00">0.00</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="register_here">Register Here</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_pin_code">Enter PIN Code</string>
    <string name="something_went_wrong">Something Went Wrong!</string>
    <string name="unable_to_connect">Unable To Connect!</string>
    <string name="amount">Amount</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="create">Create</string>
    <string name="redeem">Redeem</string>
    <string name="generate_qr">Generate QR</string>
    <string name="qr_code">QR Code</string>
    <string name="pin_code">PIN Code</string>
</resources>
